--- a/extension/content.css
+++ b/extension/content.css
@@ -49,6 +49,7 @@ img.mlwe-icon:hover {
   text-overflow: ellipsis;
   white-space: nowrap;
   color: #666;
+  transition: background-color 0.1s ease;
   background-position: left 1em center;
   background-repeat: no-repeat;
   background-size: 24px;
